--- a/index.html
+++ b/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='bootstrap.min.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <script src="bootstrap.min.js"></script>
+    <script src="eonet-api.js"></script>
 </head>
 
 <body>
-<header>
-  <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index-bs.html">EONET</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav nav-justified w-100 text-center">
-                <li class="nav-item">
-                    <a class="nav-link d-flex flex-column" href="dashboard.html">
-                        <i class="bi-newspaper nav-icon"></i>
-                        <span class="d-none d-sm-inline">Dashboard</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-flex flex-column" href="charts.html">
-                        <i class="bi-bar-chart-fill nav-icon"></i>
-                        <span class="d-none d-sm-inline">Charts</span>
-                    </a>
-                </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-flex flex-column" href="maps.html">
-                        <i class="bi-globe nav-icon"></i>
-                        <span class="d-none d-sm-inline">Maps</span>
-                    </a>
-                </li>
-            </ul>
+
+    <header>
+        <nav class="navbar top navbar-expand-sm navbar-dark bg-dark mb-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">EONET</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav nav-justified w-100 text-center">
+                        <li class="nav-item">
+                            <a class="nav-link d-flex flex-column" href="dashboard.html">
+                                <i class="bi-newspaper nav-icon"></i>
+                                <span class="d-none d-sm-inline">Dashboard</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex flex-column" href="charts.html">
+                                <i class="bi-bar-chart-fill nav-icon"></i>
+                                <span class="d-none d-sm-inline">Charts</span>
+                            </a>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex flex-column" href="maps.html">
+                                <i class="bi-globe nav-icon"></i>
+                                <span class="d-none d-sm-inline">Maps</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container">
+        <h1 class="fw-light mb-5">Categories</h1>
+        
+        <!--
+        <div class="spinner-grow" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+        -->
+        <div id="categories" class="container">
+            <!-- EONET categories will be inserted here programmatically -->
         </div>
     </div>
-</nav>
-</header>
 
-<footer></footer>
 
+    <footer></footer>
+    <script>
+        window.addEventListener('load', (event) => {
+            fetchCategoriesAsync()
+        });
+    </script>
 </body>
 
 </html>
