Render sorted event list

--- a/dashboard.html
+++ b/dashboard.html
@@ -50,24 +50,10 @@
     <main>
         <div class="container">
             <h1 class="fw-light mb-5">Current Natural Events</h1>
-            <div role="table" aria-label="Dashboard" class="container">
-                <div class="row">
-                    <div class="col">Drought<span id="drought"></span></div>
-                    <div class="col">Dust Haze<span id="dusthaze"></span></div>
-                    <div class="col">Earthquakes<span id="earthquakes"></span></div>
-                    <div class="col">Floods<span id="floods"></span></div>
-                    <div class="col">Landslides<span id="landslides"></span></div>
-                    <div class="col">Man made<span id="manmade"></span></div>
-                    <div class="col">Sea Lake Ice<span id="sealakeice"></span></div>
-                </div>
-                <div class="row">
-                    <div class="col">Severe Storms<span id="severestorms"></span></div>
-                    <div class="col">Snow<span id="snow"></span></div>
-                    <div class="col">Temp Extremes<span id="tempextremes"></span></div>
-                    <div class="col">Volcanoes<span id="volcanoes"></span></div>
-                    <div class="col">Water Colour<span id="watercolour"></span></div>
-                    <div class="col">Wildfires<span id="wildfires"></span></div>
-                </div>
+            <div role="table" aria-label="Current Natrual Events" class="container">
+                <ul id="currentevents" class="list-group" role="rowgroup">
+                 <!-- EONET current events will be inserted here programmatically -->  
+                 </ul>
             </div>
         </div>
     </main>
