--- a/maps.html
+++ b/maps.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='bootstrap.min.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+
     <script src="bootstrap.min.js"></script>
     <script src="eonet-api.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+
 </head>
+
 <body>
 
     <header>
@@ -45,6 +50,17 @@
             </div>
         </nav>
     </header>
+    <div class="container">
+        <div id="map" style="width: 80vw; height: 40vw;"></div>
+    </div>
+    <script>
+
+        window.addEventListener('load', (event) => {
+            fetchMapDataAsync()
+        });
+    </script>
+
 </body>
+
 
 </html>
