--- a/dashboard.html
+++ b/dashboard.html
@@ -50,6 +50,9 @@
     <main>
         <div class="container">
             <h1 class="fw-light mb-5">Current Natural Events</h1>
+            <div class="spinner-grow text-primary" role="status" id="spinner">
+                <span class="visually-hidden">Loading...</span>
+            </div>
             <div role="table" aria-label="Current Natrual Events" class="container">
                 <ul id="currentevents" class="list-group" role="rowgroup">
                  <!-- EONET current events will be inserted here programmatically -->  
