--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
     <main>
         <div class="container">
             <h1 class="fw-light mb-5">Categories</h1>
+            <div class="spinner-grow text-primary" role="status" id="spinner">
+                <span class="visually-hidden">Loading...</span>
+            </div>
             <div role="table" aria-label="Categories" class="container">
                 <div id="categories" role="rowgroup">
                     <!-- EONET categories will be inserted here programmatically -->
-                <div>
-            </div>
-        </div>
+                    <div>
+                    </div>
+                </div>
     </main>
 
     <footer></footer>
@@ -67,5 +70,3 @@
 </body>
 
 </html>
-
-
