--- a/maps.html
+++ b/maps.html
@@ -51,7 +51,12 @@
         </nav>
     </header>
     <div class="container">
-        <div id="map" style="width: 80vw; height: 40vw;"></div>
+
+        <div class="spinner-grow text-primary m-5" role="status" id="spinner">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+        <div id="map" style="width: 60vw; height: 40vw;"></div>
+
     </div>
     <script>
 
