--- a/charts.html
+++ b/charts.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='bootstrap.min.css'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
-  <script src="bootstrap.min.js"></script>
   <script src="eonet-api.js"></script>
 </head>
 
@@ -52,15 +52,26 @@
     <div class="spinner-grow text-primary m-5" role="status" id="spinner">
       <span class="visually-hidden">Loading...</span>
     </div>
+    <div class="container d-flex justify-content-start">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          Select Year
+        </button>
+        <ul class="dropdown-menu" id="year-select" aria-labelledby="dropdownMenuButton1">
+          <!-- We will dynamically add year options here -->         
+        </ul>
+      </div>
+    </div>
 
     <div class="chartContainer">
-      <canvas id="chart" height="250" width="400">
+      <canvas id="year-events-chart" height="250" width="400">
       </canvas>
     </div>
   </div>
   <script>
     window.addEventListener('load', (event) => {
-      fetchChartDataAsync()
+      initChartControls()
     });
   </script>
 </body>
